fix web and weixin topic new button visible

--- a/app/assets/stylesheets/colorful.css
+++ b/app/assets/stylesheets/colorful.css
@@ -2694,6 +2694,10 @@ i.img-icon{
 }
 
 .badge-info-margin {
-  margin-left: 10px;
-  margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.label {
+    padding: 5px;
 }
