--- a/app/assets/stylesheets/colorful_weixin.css
+++ b/app/assets/stylesheets/colorful_weixin.css
@@ -1090,3 +1090,7 @@ ul.list_menu_li li{
     line-height: 45px;
     list-style-type: none;
 }
+
+.label {
+  padding: 10px;
+}
